# soulace

./: Cargo.toml
client/: Cargo.toml
client/cache/: default.sass
client/src/: lib.rs  main.rs
client/template/: default.sass
server/: Cargo.toml
server/src/: main.rs
server/test/: home.sass  home.yaml
server/web/john/: about.yaml
server/web/test/: home.luau  home.sass  home.sass.txt  home.yaml
src/: main.rs
test/: home.yaml
