[package]
name = "soulace"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
eframe = { version = "0.31", features = ["wgpu"] }
grass = "0.13.4"
simplecss = "0.2.2"
serde_yaml = "0.9.34"
reqwest = "0.12.15"
pollster = "0.4.0"
mlua = { version = "0.10.3", features = ["luau"] }
poll-promise = { version = "0.3.0", features = ["tokio"] }
